2009-02-18  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (ICON_LOAD): don't segfault if err is NULL (bgo #548062)
		- (finalize): dispose of the settings proxies after disposing
			of the NMClient so that the new-ap-notification stuff
			in applet-device-wifi.c does log errors when disposing
			of its data
		- (constructor): ensure the missing gladefile warning dialog sticks around
		- (nma_icons_load): ensure the missing icon warning dialog sticks around

	* src/applet-dialogs.c
	  src/applet-dialogs.h
		- (applet_warning_dialog_show): return the dialog object so the caller
			can do something useful with it (like gtk_dialog_run()); fix
			focus-stealing prevention, and set a title and icon

	* src/main.c
		- Pass the mainloop to the applet

2009-02-17  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
	  src/gconf-helpers/gconf-helpers.h
		- (nm_gconf_clear_keyring_items): clear keyring items for a
			connection

	* src/connection-editor/nm-connection-list.c
		- (remove_connection): clear keyring items when removing a user connection

2009-02-17  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/eap-method.c
	  src/wireless-security/eap-method.h
		- Consolidate CA certificate nag dialog handling in the EAP method
			to get correct dialog destruction and reduce code.  Fixes crash
			when nag dialog would come up the second time.

	* src/wireless-security/eap-method-peap.c
	  src/wireless-security/eap-method-peap.h
	  src/wireless-security/eap-method-tls.c
	  src/wireless-security/eap-method-tls.h
	  src/wireless-security/eap-method-ttls.c
	  src/wireless-security/eap-method-ttls.h
		- Move CA certificate nag dialog handling to EAPMethod class

	* src/applet-device-wifi.c
		- (wireless_dialog_response_cb, get_secrets_dialog_response_cb):
			don't destroy nag dialog with parent; the EAP method object
			takes care of destruction for us

2009-02-16  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-upgrade.c